<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddLibraryActivity"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingTop="35dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="30dp">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:layout_marginStart="220dp"
        android:layout_marginBottom="520dp">


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/favoritesbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:text="Favorite   " />
            <Button
                android:id="@+id/addlibraryimagebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/add_library_image" />
        </LinearLayout>
        <ImageView
            android:id="@+id/libraryimage"
            android:layout_width="190dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:scaleType="fitCenter"
            android:background="#736D6D"
            app:srcCompat="@android:drawable/ic_menu_add"
            android:contentDescription="@string/library_image" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="230dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/libraryname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/library_name"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="350dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="50dp"
            android:paddingEnd="50dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/librarylocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/library_location" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/picklocation"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="20dp"
                app:srcCompat="@drawable/diamond_turn_right"
                android:contentDescription="@string/pick_location_on_map" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:paddingBottom="200dp">
            <Button
                android:id="@+id/addlibrarybutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_library"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:paddingBottom="110dp">
            <Button
                android:id="@+id/cancelbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>