<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="start"
        android:paddingTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="400dp">
        <ImageView
            android:id="@+id/bookcover"
            android:layout_width="120dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/ic_menu_add"
            android:background="#736D6D"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/notifications"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="60dp"
                android:layout_marginStart="20dp"/>

            <Button
                android:id="@+id/addcover"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:text="@string/add_book_cover"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="300dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/booktitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_title"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="400dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="50dp"
            android:paddingEnd="50dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bookbarcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/barcode"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:paddingBottom="160dp">
            <Button
                android:id="@+id/addbook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_book"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:paddingBottom="70dp">
            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>